# django-website

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
pybo/: views.py
