[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "My first Django website."
authors = ["Minju Kim <bluuminn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
